--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
   <div class="subnav">
     <button class="subnavbtn">Detailliert<i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <span style="float:left; width: 50%"><p>&nbsp;</p></span>
+      <span style="float:left; width: 45%"><p>&nbsp;</p></span>
+      <a href="{{ site.url }}{{ '/overview/useCaseDiagrams.html' | relative_url }}">Use-Case-Diagramme</a>
       <a href="{{ site.url }}{{ '/overview/useCases.html' | relative_url }}">Use Cases</a>
       <a href="{{ site.url }}{{ '/overview/userStories.html' | relative_url }}">Agiles Backlog</a>
     </div>
