--- a/_layouts/useCase.html
+++ b/_layouts/useCase.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% include /functions/get-globalid.html
-        myCollection=site.stakeholders myArtefact=page myType="useCase" %}
+        myCollection=site.useCases myArtefact=page myType="useCase" %}
 <h1>Use Case »{{ page.title }}« ({{ globalId }})</h1>
 
 <dl>
