changed the way authors are represented

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
     <div class="subnav-content">
       <span style="float:left; width: 50%"><p>&nbsp;</p></span>
       <a href="{{ site.url }}{{ '/overview/reviews.html' | relative_url }}">Formale Reviews</a>
-      <a href="{{ site.url }}{{ '/overview/artefactsPerPerson.html' | relative_url }}">Übersicht Artefakte pro Person</a>
+      <a href="{{ site.url }}{{ '/overview/authors.html' | relative_url }}">Übersicht Autor*innen (mit Artefakten)</a>
     </div>
   </div>
 
