first version of author page ready

--- a/_includes/functions/get-check-icon.html
+++ b/_includes/functions/get-check-icon.html
@@ -4,9 +4,9 @@
 
 {% assign iconString = "&nbsp;" %}
 {% if errorString.size > 0 %}
-    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/alert-16.png' | relative_url }}" width="16" height="16"/>{% endcapture %}
+    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/alert-16.png' | relative_url }}" style="min-height: 16px; min-width: 16px;"/>{% endcapture %}
 {% elsif warningString.size > 0 %}
-    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/warning-16.png' | relative_url }}" width="16" height="16"/>{% endcapture %}
+    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/warning-16.png' | relative_url }}" style="min-height: 16px; min-width: 16px;"/>{% endcapture %}
 {% elsif todoList.size > 0 %}
-    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/clipboard-4-16.png' | relative_url }}" width="16" height="16"/>{% endcapture %}
+    {% capture iconString %}<img src="{{ site.url }}{{ '/assets/clipboard-4-16.png' | relative_url }}" style="min-height: 16px; min-width: 16px;"/>{% endcapture %}
 {% endif %}
