--- a/_layouts/review.html
+++ b/_layouts/review.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include /functions/get-globalid.html
         myCollection=site.reviews myArtefact=page myType="review" %}
-<h1>QS-Review »{{ page.referencedType }}« ({{ globalId }})</h1>
+<h1>Formales Review »{{ page.referencedType }}« ({{ globalId }})</h1>
 
 <dl>
     {% include /functions/print-history.html myArtefact=page %}
