--- a/_includes/functions/resolve-names.html
+++ b/_includes/functions/resolve-names.html
@@ -1,4 +1,4 @@
-{% assign acronymList = include.my_responsible %}
+{% assign acronymList = include.myResponsible %}
 {% assign exclude =  include.myExclude %}
 
 {% assign responsibleList = "" | split: ";" %}
