--- a/_layouts/interview.html
+++ b/_layouts/interview.html
@@ -15,7 +15,7 @@ layout: default
     <dd>{{ stakeholder.name }}</dd>
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
+    <dd>{% include /functions/resolve-names.html myResponsible=page.responsible %}{{ responsibleString }}</dd>
 
 
 
