--- a/_layouts/stakeholder.html
+++ b/_layouts/stakeholder.html
@@ -19,7 +19,7 @@ layout: default
 
 <dl>
     <dt>Autor(en)</dt>
-    {% include /functions/resolve-names.html my_responsible=page.responsible %}
+    {% include /functions/resolve-names.html myResponsible=page.responsible %}
     <dd>{{ responsibleString }}</dd>
 
     <dt>Stakeholder-Rolle</dt>
