--- a/_layouts/useCaseDiagram.html
+++ b/_layouts/useCaseDiagram.html
@@ -8,7 +8,7 @@ layout: default
 
 <dl>
     <dt>Autor(en)</dt>
-    {% include /functions/resolve-names.html my_responsible=page.responsible %}
+    {% include /functions/resolve-names.html myResponsible=page.responsible %}
     <dd>{{ responsibleString }}</dd>
 
     {% include /functions/print-history.html myArtefact=page %}
