--- a/_layouts/survey.html
+++ b/_layouts/survey.html
@@ -34,7 +34,7 @@ layout: default
     {% endif %}
 
     <dt>Responsible</dt>
-    <dd>{% include /functions/resolve-names.html my_responsible=page.responsible %}{{ responsibleString }}</dd>
+    <dd>{% include /functions/resolve-names.html myResponsible=page.responsible %}{{ responsibleString }}</dd>
 
 
     <dt>History</dt>
