--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,12 @@
 ---
 
 @import "{{ site.theme }}";
+/* Only for Minima! */
+a {
+  &:visited {
+    color: #2a7ae2;
+  }
+}
 #header {
   z-index: 100;
   left:0;
@@ -12,6 +18,7 @@
   background: url(../images/nav-bg.gif) #353535;
   border-bottom: 4px solid #434343;
   box-shadow: 0px 1px 3px rgba(0,0,0,.25);
+
 
   nav {
     max-width: 950px;
@@ -117,63 +124,6 @@ section {
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
   margin-top: 80px;
-}
-._0_neutral {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: white;
-}
-._1_open {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #C90C0F;
-}
-._2_draft {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #EA5B0C;
-
-}
-._3_sig_agreed {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #F9FF42;
-}
-._4_stakeholder_checked {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #42c0fb;
-}
-._5_presented {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #00B050;
-}
-._3_team_agreed {
-  width:14px;
-  height:14px;
-  padding: 4px;
-  -moz-border-radius: 30%;
-  border-radius: 30%;
-  background-color: #00B050;
 }
 
 /* The navigation menu */
