--- a/_layouts/stakeholderRole.html
+++ b/_layouts/stakeholderRole.html
@@ -86,10 +86,7 @@ layout: default
 
     {% include /functions/print-history.html myArtefact=page %}
 
-    {% include /functions/checks/check-generic-aspects.html myArtefact=page
-            myErrorString="" myWarningString="" %}
-    {% include /functions/checks/check-stakeholderRole.html myArtefact=page
-            myErrorString=errorString myWarningString=warningString %}
+    {% include /functions/checks/check-stakeholderRole.html myArtefact=page %}
     {% include /functions/print-detailed-check-messages.html errors=errorString warnings=warningString todos=page.todo %}
 </dl>
 
