--- a/_includes/functions/checks/check-stakeholder.html
+++ b/_includes/functions/checks/check-stakeholder.html
@@ -1,13 +1,18 @@
 {% assign artefact = include.myArtefact %}
-{% assign errorString = include.myErrorString %}
-{% assign warningString = include.myWarningString %}
+
+{% comment %}---------- First the generic checks -----------{% endcomment %}
+
+{% include /functions/checks/generic/check-generic-aspects.html myArtefact=artefact
+        myErrorString="" myWarningString="" %}
+{% assign stakeholderRoleRef = artefact.stakeholderRole %}
+{% include /functions/checks/generic/check-stakeholderRole-refs.html myStakeholderRoleRef=stakeholderRoleRef
+        myAsList=true myPurpose="Stakeholder-Rolle" myErrorString=errorString myWarningString=warningString %}
 
 {% assign errorList = errorString | split: ";" %}
 {% assign warningList = warningString | split: ";" %}
 
 
 {% comment %} ***** Error Numbers 530 - 549 reserved for Stakeholder **** {% endcomment %}
-
 
 {% comment %}---------- relationshipToProject -----------{% endcomment %}
 {% if artefact.relationshipToProject %}
