--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -13,8 +13,7 @@ layout: default
 
     {% include /functions/print-history.html myArtefact=page %}
 
-    {% include /functions/checks/check-generic-aspects.html myArtefact=page myErrorString=""
-    myWarningString="" %}
+    {% include /functions/checks/check-scenario.html myArtefact=page %}
     {% include /functions/print-detailed-check-messages.html errors=errorString warnings=warningString
     todos=page.todo %}
 </dl>
