some refactoring for types and ids

--- a/_includes/functions/checks/check-goal.html
+++ b/_includes/functions/checks/check-goal.html
@@ -12,7 +12,7 @@
 {% assign warningList = warningString | split: ";" %}
 
 
-{% comment %} ***** Error/Warning Numbers 790 - 809 reserved for Workshop **** {% endcomment %}
+{% comment %} ***** Error/Warning Numbers 790 - 809 reserved for Goal **** {% endcomment %}
 
 {% comment %}---------- title -----------{% endcomment %}
 {% if artefact.title %}
