--- a/_layouts/goal.html
+++ b/_layouts/goal.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include /functions/get-globalid.html myCollection=site.goals myArtefact=page myType="goal" %}
+{% include /functions/get-globalid.html myArtefact=page %}
 <h1>Ziel »{{ page.title }}« ({{ globalId }})</h1>
 
 <dl>
