--- a/_layouts/scenario.html
+++ b/_layouts/scenario.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include /functions/get-globalid.html myCollection=site.scenarios myArtefact=page myType="scenario" %}
+{% include /functions/get-globalid.html myArtefact=page %}
 <h1>Scenario »{{ page.title }}« ({{ globalId }})</h1>
 
 <dl>
