--- a/_layouts/useCase.html
+++ b/_layouts/useCase.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-{% include /functions/get-globalid.html
-        myCollection=site.useCases myArtefact=page myType="useCase" %}
+{% include /functions/get-globalid.html myArtefact=page %}
 <h1>Use Case »{{ page.title }}« ({{ globalId }})</h1>
 
 <dl>
