--- a/_layouts/survey.html
+++ b/_layouts/survey.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<!-- {% include /functions/get-status-infos.html mydecision=page %} -->
-<h1>{{ page.subject }}</h1>
+{% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
+<h1>Umfrage {{ artefactName }}</h1>
 
 <dl>
     <dt>Acronym</dt>
