--- a/_layouts/userStory.html
+++ b/_layouts/userStory.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-{% include /functions/get-globalid.html myArtefact=page %}
-<h1>User Story »{{ page.title }}« ({{ globalId }})</h1>
+{% include /functions/get-artefact-name.html myArtefact=page myIdFormat="postfixWithBrackets" %}
+<h1>User Story {{ artefactName }}</h1>
 
 <dl>
     <dt>Autor(en)</dt>
